<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_noticeboard"
        android:icon="@drawable/ic_baseline_push_pin_24"
        android:title="@string/notice_board"/>

    <item android:id="@+id/menu_study_material"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/study_material" />

    <item android:id="@+id/menu_mentor_mentee"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/mentor_mentee"/>

    <item android:id="@+id/menu_societies"
        android:icon="@drawable/ic_baseline_groups_24"
        android:title="@string/societies"/>

    <item android:id="@+id/menu_acadinfo"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/academic_info"/>

    <item android:id="@+id/menu_know_your_department"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/know_your_department"/>

    <item android:id="@+id/menu_acad_calendar"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/academic_calendar"/>

</menu>