<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/trial_blue"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingTop="20dp">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/swg_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/student_welfare_group"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:text="@string/iit_kgp"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:text="@string/right_where_you_need_us"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" />


</androidx.appcompat.widget.LinearLayoutCompat>